rasn-compiler-tests/tests/snapshots/simple_types__bit_string_named_bits.snap
---
source: rasn-compiler-tests/tests/simple_types.rs
description: " Test-Bits ::= BIT STRING {\n            first(0) -- first bit --,\n            last(1),\n        } SIZE(2)                                           "
---
Generated:
# [allow (non_camel_case_types , non_snake_case , non_upper_case_globals , unused , clippy :: too_many_arguments ,)] pub mod test_module { extern crate alloc ; use core :: borrow :: Borrow ; use std :: sync :: LazyLock ; use rasn :: prelude :: * ; # [derive (AsnType , Debug , Clone , Decode , Encode , PartialEq , Eq , Hash)] # [rasn (delegate , identifier = "Test-Bits")] pub struct TestBits (pub FixedBitString < 2usize >) ; }
