rasn-compiler-tests/tests/snapshots/simple_types__bit_string_strict_ext.snap
---
source: rasn-compiler-tests/tests/simple_types.rs
description: "Test-Bits ::= BIT STRING (SIZE(4,...))"
---
Generated:
# [allow (non_camel_case_types , non_snake_case , non_upper_case_globals , unused , clippy :: too_many_arguments ,)] pub mod test_module { extern crate alloc ; use core :: borrow :: Borrow ; use std :: sync :: LazyLock ; use rasn :: prelude :: * ; # [derive (AsnType , Debug , Clone , Decode , Encode , PartialEq , Eq , Hash)] # [rasn (delegate , identifier = "Test-Bits" , size ("4" , extensible))] pub struct TestBits (pub BitString) ; }
