rasn-compiler-tests/tests/snapshots/simple_types__bit_string_value.snap
---
source: rasn-compiler-tests/tests/simple_types.rs
description: "test-bits BIT STRING ::= '1010'B"
---
Generated:
# [allow (non_camel_case_types , non_snake_case , non_upper_case_globals , unused , clippy :: too_many_arguments ,)] pub mod test_module { extern crate alloc ; use core :: borrow :: Borrow ; use std :: sync :: LazyLock ; use rasn :: prelude :: * ; pub static TEST_BITS : LazyLock < BitString > = LazyLock :: new (|| [true , false , true , false] . into_iter () . collect ()) ; }
